# simple-fsm-rtos

./: CMakeLists.txt  main.c
src/: simple_circular_queue.c  simple_circular_queue.h
